--- a/application/admin/view/admin/adv_list.html
+++ b/application/admin/view/admin/adv_list.html
@@ -53,13 +53,13 @@
             <!--</div>-->
 
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REDIRECT_URL']}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
 
         </form>
     </div>
     <xblock>
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-        <button class="layui-btn" onclick="x_admin_show('添加广告','/admin/admin/adv_add')"><i class="layui-icon"></i>添加</button>
+        <button class="layui-btn" onclick="x_admin_show('添加广告','/admin/Admin/adv_add')"><i class="layui-icon"></i>添加</button>
         <span class="x-right" style="line-height:40px">广告数量：{$count} 条</span>
     </xblock>
     <table class="layui-table">
@@ -98,7 +98,7 @@
                 </td>
 
                 <td class="td-manage">
-                    <a title="编辑"  onclick="x_admin_show('编辑','/admin/admin/adv_edit?id={$vo.id}')" href="javascript:;">
+                    <a title="编辑"  onclick="x_admin_show('编辑','/admin/Admin/adv_edit?id={$vo.id}')" href="javascript:;">
                         <i class="layui-icon">&#xe642;</i>
                     </a>
                     <a title="删除" onclick="member_del(this,{$vo['id']})" href="javascript:;">
