--- a/application/admin/view/coin/user_apply_coin.html
+++ b/application/admin/view/coin/user_apply_coin.html
@@ -52,8 +52,8 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REDIRECT_URL']}"  class="layui-btn layui-btn-normal">重置</a>
-            <a href="{:url('admin/api/excel_user_apply_coin',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
+            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="{:url('admin/Api/excel_user_apply_coin',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
 
         </form>
       </div>
