--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -19,7 +19,7 @@
 <body>
 <!-- 顶部开始 -->
 <div class="container">
-    <div class="logo"><a href="/admin/index/index">{$GLOBALS['title']}</a></div>
+    <div class="logo"><a href="/admin/Index/index">{$GLOBALS['title']}</a></div>
     <div class="left_open">
         <i title="展开左侧栏" class="iconfont">&#xe699;</i>
     </div>
@@ -28,7 +28,7 @@
         <li class="layui-nav-item">
             <a href="javascript:;">{$nickname}</a>
             <dl class="layui-nav-child"> <!-- 二级菜单 -->
-                <dd><a onclick="x_admin_show('个人信息','/admin/index/personal',1000,600)">个人信息</a></dd>
+                <dd><a onclick="x_admin_show('个人信息','/admin/Index/personal',1000,600)">个人信息</a></dd>
                 <dd><a href="/admin/Login/logout">退出</a></dd>
             </dl>
         </li>
@@ -50,37 +50,37 @@
                 </a>
                 <ul class="sub-menu">
                     <!--<li>-->
-                        <!--<a _href="/admin/admin/adv_list">-->
+                        <!--<a _href="/admin/Admin/adv_list">-->
                             <!--<i class="iconfont">&#xe6a7;</i>-->
                             <!--<cite>广告列表</cite>-->
                         <!--</a>-->
                     <!--</li >-->
                     <li>
-                        <a _href="/admin/admin/notice_list">
+                        <a _href="/admin/Admin/notice_list">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>公告列表</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/admin/news_list">
+                        <a _href="/admin/Admin/news_list">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>资讯列表</cite>
                         </a>
                     </li >
                     <!--<li>-->
-                        <!--<a _href="/admin/admin/protocol_list">-->
+                        <!--<a _href="/admin/Admin/protocol_list">-->
                             <!--<i class="iconfont">&#xe6a7;</i>-->
                             <!--<cite>协议列表</cite>-->
                         <!--</a>-->
                     <!--</li >-->
                     <li>
-                        <a _href="/admin/admin/kefu_list">
+                        <a _href="/admin/Admin/kefu_list">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>客服列表</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/admin/product_list">
+                        <a _href="/admin/Admin/product_list">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>产品列表</cite>
                         </a>
@@ -96,19 +96,19 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="/admin/user/agent_list">
+                        <a _href="/admin/User/agent_list">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>代理列表</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/user/user_list">
+                        <a _href="/admin/User/user_list">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>会员列表</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/user/bank_list">
+                        <a _href="/admin/User/bank_list">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>银行卡列表</cite>
                         </a>
@@ -123,13 +123,13 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="/admin/order/order_list?start={$mytime}">
+                        <a _href="/admin/Order/order_list?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>平仓记录</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/order/keep_order_list?start={$mytime}">
+                        <a _href="/admin/Order/keep_order_list?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>持仓记录</cite>
                         </a>
@@ -145,32 +145,32 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="/admin/money/recharge_list?start={$mytime}">
+                        <a _href="/admin/Money/recharge_list?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>自动充值记录</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/money/agent_withdraw_list?start={$mytime}">
+                        <a _href="/admin/Money/agent_withdraw_list?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>代理提现记录</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/money/user_withdraw_list?start={$mytime}">
+                        <a _href="/admin/Money/user_withdraw_list?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>会员提现记录</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/money/agent_money_list?start={$mytime}">
+                        <a _href="/admin/Money/agent_money_list?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>代理资金记录</cite>
                         </a>
                     </li >
 
                     <li>
-                        <a _href="/admin/money/user_money_list?start={$mytime}">
+                        <a _href="/admin/Money/user_money_list?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>会员资金记录</cite>
                         </a>
@@ -186,25 +186,25 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="/admin/coin/coin_list">
+                        <a _href="/admin/Coin/coin_list">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>申购币列表</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/coin/user_apply_coin">
+                        <a _href="/admin/Coin/user_apply_coin">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>申购币持有记录</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/coin/apply_coin_order_log?start={$mytime}">
+                        <a _href="/admin/Coin/apply_coin_order_log?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>申购币购买记录</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/coin/apply_coin_give_log?start={$mytime}">
+                        <a _href="/admin/Coin/apply_coin_give_log?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>申购币赠送记录</cite>
                         </a>
@@ -219,19 +219,19 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                    <a _href="/admin/log/user_log?start={$mytime}">
+                    <a _href="/admin/Log/user_log?start={$mytime}">
                     <i class="iconfont">&#xe6a7;</i>
                     <cite>会员日志</cite>
                     </a>
                     </li >
                     <li>
-                    <a _href="/admin/log/agent_log?start={$mytime}">
+                    <a _href="/admin/Log/agent_log?start={$mytime}">
                     <i class="iconfont">&#xe6a7;</i>
                     <cite>代理日志</cite>
                     </a>
                     </li >
                     <li>
-                        <a _href="/admin/log/admin_log?start={$mytime}">
+                        <a _href="/admin/Log/admin_log?start={$mytime}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>平台日志</cite>
                         </a>
@@ -247,7 +247,7 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="/admin/system/index">
+                        <a _href="/admin/System/index">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>系统设置</cite>
                         </a>
@@ -268,7 +268,7 @@
         </ul>
         <div class="layui-tab-content">
             <div class="layui-tab-item layui-show">
-                <iframe src='/admin/index/main' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
+                <iframe src='/admin/Index/main' frameborder="0" scrolling="yes" class="x-iframe"></iframe>
             </div>
         </div>
     </div>
