--- a/application/admin/view/index/main.html
+++ b/application/admin/view/index/main.html
@@ -28,14 +28,14 @@
                                 <div carousel-item="">
                                     <ul class="layui-row layui-col-space10 layui-this">
                                         <li class="layui-col-xs2">
-                                            <a onclick="x_admin_show('会员列表','/admin/user/user_list')" class="x-admin-backlog-body">
+                                            <a onclick="x_admin_show('会员列表','/admin/User/user_list')" class="x-admin-backlog-body">
                                                 <h3>会员数</h3>
                                                 <p>
                                                     <cite>{$param['count_user']}</cite></p>
                                             </a>
                                         </li>
                                         <li class="layui-col-xs2">
-                                            <a onclick="x_admin_show('代理列表','/admin/user/agent_list?param=1')"  class="x-admin-backlog-body">
+                                            <a onclick="x_admin_show('代理列表','/admin/User/agent_list?param=1')"  class="x-admin-backlog-body">
                                                 <h3>代理数</h3>
                                                 <p>
                                                     <cite>{$param['count_agent']}</cite></p>
@@ -43,28 +43,28 @@
                                         </li>
 
                                         <li class="layui-col-xs2">
-                                            <a onclick="x_admin_show('自动充值记录','/admin/money/recharge_list?start={$mytime}')" class="x-admin-backlog-body">
+                                            <a onclick="x_admin_show('自动充值记录','/admin/Money/recharge_list?start={$mytime}')" class="x-admin-backlog-body">
                                                 <h3>充值金额</h3>
                                                 <p>
                                                     <cite>{$param['sum_recharge']|number_format=###,2,'.',''}</cite></p>
                                             </a>
                                         </li>
                                         <li class="layui-col-xs2">
-                                            <a  onclick="x_admin_show('会员提现记录','/admin/money/user_withdraw_list?start={$mytime}')" class="x-admin-backlog-body">
+                                            <a  onclick="x_admin_show('会员提现记录','/admin/Money/user_withdraw_list?start={$mytime}')" class="x-admin-backlog-body">
                                                 <h3>会员提现</h3>
                                                 <p>
                                                     <cite>{$param['sum_user_withdraw']|number_format=###,2,'.',''}</cite></p>
                                             </a>
                                         </li>
                                         <li class="layui-col-xs2">
-                                            <a onclick="x_admin_show('代理提现记录','/admin/money/agent_withdraw_list?start={$mytime}')" class="x-admin-backlog-body">
+                                            <a onclick="x_admin_show('代理提现记录','/admin/Money/agent_withdraw_list?start={$mytime}')" class="x-admin-backlog-body">
                                                 <h3>代理提现</h3>
                                                 <p>
                                                     <cite>{$param['sum_agent_withdraw']|number_format=###,2,'.',''}</cite></p>
                                             </a>
                                         </li>
                                         <li class="layui-col-xs2">
-                                            <a onclick="x_admin_show('下注记录','/admin/order/order_list?start={$mytime}')"  class="x-admin-backlog-body">
+                                            <a onclick="x_admin_show('下注记录','/admin/Order/order_list?start={$mytime}')"  class="x-admin-backlog-body">
                                                 <h3>平台抽水</h3>
                                                 <p>
                                                     <cite>{$param['sum_order_fee']|number_format=###,2,'.',''}</cite></p>
@@ -157,7 +157,7 @@
                     {volist name="param['notice']" id="val"}
                     <tr>
                         <td >
-                            <a class="x-a" href="/admin/index/notice?id={$val.id}" target="_blank">{$val['type']|str_notice_type}||{$val['title']}||{$val['add_time']}</a>
+                            <a class="x-a" href="/admin/Index/notice?id={$val.id}" target="_blank">{$val['type']|str_notice_type}||{$val['title']}||{$val['add_time']}</a>
                         </td>
                     </tr>
                     {/volist}
