--- a/application/admin/view/index/personal.html
+++ b/application/admin/view/index/personal.html
@@ -94,7 +94,7 @@
         //监听提交
         form.on('submit(add)', function(data){
             $('.layui-btn').attr("disabled",true);
-            $.post("/admin/index/personal",data.field,function(res){
+            $.post("/admin/Index/personal",data.field,function(res){
                 if(res.status==0){
                     layer.msg(res.msg,{icon: 2,time:2000},function(){
                         $('.layui-btn').removeAttr("disabled");
