--- a/application/admin/view/login/login.html
+++ b/application/admin/view/login/login.html
@@ -45,7 +45,7 @@
                             });
                         }else{
                             layer.msg(res.msg,{icon: 1,time:1000},function(){
-                                window.location.href="/admin/index/index"
+                                window.location.href="/admin/Index/index"
                             });
                         }
                     },'json');
