--- a/application/admin/view/order/keep_order_list.html
+++ b/application/admin/view/order/keep_order_list.html
@@ -62,18 +62,18 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REDIRECT_URL']}?start={$mytime}"  class="layui-btn layui-btn-normal">重置</a>
-            <!--<a href="{:url('admin/api/excel_order_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>-->
+            <a href="{$_SERVER['REQUEST_URI']}?start={$mytime}"  class="layui-btn layui-btn-normal">重置</a>
+            <!--<a href="{:url('admin/Api/excel_order_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>-->
 
         </form>
       </div>
         <!--<div class="layui-row">-->
-            <!--<a href="{:url('admin/order/order_list',input('get.'))}&start={:quick_time_select(1)}&end={:quick_time_select(2)}" class="layui-btn layui-btn-sm layui-btn-normal">昨天</a>-->
-            <!--<a href="{:url('admin/order/order_list',input('get.'))}&start={:quick_time_select(2)}&end=" class="layui-btn layui-btn-sm layui-btn-normal">今天</a>-->
-            <!--<a href="{:url('admin/order/order_list',input('get.'))}&start={:quick_time_select(3)}&end=" class="layui-btn layui-btn-sm layui-btn-normal">本周</a>-->
-            <!--<a href="{:url('admin/order/order_list',input('get.'))}&start={:quick_time_select(4)}&end={:quick_time_select(5)}" class="layui-btn layui-btn-sm layui-btn-normal">上周</a>-->
-            <!--<a href="{:url('admin/order/order_list',input('get.'))}&start={:quick_time_select(6)}&end=" class="layui-btn layui-btn-sm layui-btn-normal">本月</a>-->
-            <!--<a href="{:url('admin/order/order_list',input('get.'))}&start={:quick_time_select(7)}&end={:quick_time_select(8)}" class="layui-btn layui-btn-sm layui-btn-normal">上月</a>-->
+            <!--<a href="{:url('admin/Order/order_list',input('get.'))}&start={:quick_time_select(1)}&end={:quick_time_select(2)}" class="layui-btn layui-btn-sm layui-btn-normal">昨天</a>-->
+            <!--<a href="{:url('admin/Order/order_list',input('get.'))}&start={:quick_time_select(2)}&end=" class="layui-btn layui-btn-sm layui-btn-normal">今天</a>-->
+            <!--<a href="{:url('admin/Order/order_list',input('get.'))}&start={:quick_time_select(3)}&end=" class="layui-btn layui-btn-sm layui-btn-normal">本周</a>-->
+            <!--<a href="{:url('admin/Order/order_list',input('get.'))}&start={:quick_time_select(4)}&end={:quick_time_select(5)}" class="layui-btn layui-btn-sm layui-btn-normal">上周</a>-->
+            <!--<a href="{:url('admin/Order/order_list',input('get.'))}&start={:quick_time_select(6)}&end=" class="layui-btn layui-btn-sm layui-btn-normal">本月</a>-->
+            <!--<a href="{:url('admin/Order/order_list',input('get.'))}&start={:quick_time_select(7)}&end={:quick_time_select(8)}" class="layui-btn layui-btn-sm layui-btn-normal">上月</a>-->
         <!--</div>-->
       <xblock>
           <span class="x-right" style="line-height:40px">合计保证金：{$count.sum_money|number_format=###,2,'.',''};手续费：{$count.sum_fee|number_format=###,2,'.',''};数量：{$count.count} 条</span>
@@ -118,7 +118,7 @@
                 <td>{$val['add_time']}</td>
                 <!--<td>{$val['update_time']}</td>-->
                 <td class="td-manage">
-                    <a title="查看"  onclick="x_admin_show('订单详情','/admin/order/order_info?oid={$val.oid}')" href="javascript:;">
+                    <a title="查看"  onclick="x_admin_show('订单详情','/admin/Order/order_info?oid={$val.oid}')" href="javascript:;">
                         <i class="layui-icon">&#xe63c;</i>
                     </a>
                    
