--- a/application/admin/view/user/agent_add.html
+++ b/application/admin/view/user/agent_add.html
@@ -115,7 +115,7 @@
         //监听提交
         form.on('submit(add)', function(data){
             $('.layui-btn').attr("disabled",true);
-            $.post("/admin/user/agent_add",data.field,function(res){
+            $.post("/admin/User/agent_add",data.field,function(res){
                 if(res.status==0){
                     layer.msg(res.msg,{icon: 2,time:2000},function(){
                         $('.layui-btn').removeAttr("disabled");
