--- a/application/admin/view/user/agent_list.html
+++ b/application/admin/view/user/agent_list.html
@@ -155,13 +155,13 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="/admin/user/agent_list?param=1"  class="layui-btn layui-btn-normal">重置</a>
-            <a href="{:url('admin/api/excel_agent_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
+            <a href="/admin/User/agent_list?param=1"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="{:url('admin/Api/excel_agent_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
         </form>
     </div>
     <xblock>
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-        <button class="layui-btn" onclick="x_admin_show('添加代理','/admin/user/agent_add')"><i class="layui-icon"></i>添加代理</button>
+        <button class="layui-btn" onclick="x_admin_show('添加代理','/admin/User/agent_add')"><i class="layui-icon"></i>添加代理</button>
         <span class="x-right" style="line-height:40px">合计余额：{$count.sum_money|number_format=###,2,'.',''};数量：{$count.count} 条</span>
     </xblock>
     <table class="layui-table">
@@ -209,12 +209,12 @@
                     {/if}
                 </td>
                 <td class="td-status">
-                    <a onclick="x_admin_show('代理邀请码','/admin/user/agent_code?id={$vo.agent_id}')" href="javascript:;"  title="查看">
+                    <a onclick="x_admin_show('代理邀请码','/admin/User/agent_code?id={$vo.agent_id}')" href="javascript:;"  title="查看">
                         <span class="layui-btn layui-btn-mini " style="background-color: #C57979">查看</span>
                     </a>
                 </td>
                 <td class="td-status">
-                    <a onclick="x_admin_show('银行卡信息','/admin/user/bank_list?username={$vo.agent_name}&utype=2')" href="javascript:;"  title="银行卡信息">
+                    <a onclick="x_admin_show('银行卡信息','/admin/User/bank_list?username={$vo.agent_name}&utype=2')" href="javascript:;"  title="银行卡信息">
                         <span class="layui-btn layui-btn-mini " style="background-color: #84AF9B">查看</span>
                     </a>
                 </td>
@@ -223,7 +223,7 @@
                         <!-- 上分点击事件-->
                         <button class="layui-btn layui-btn-warm layui-btn-sm" onclick="myshow('up',{$vo['agent_id']},'{$vo['agent_name']}')">上分</button>
                         <button class="layui-btn layui-btn-sm " style="background-color: #5BB75B;" onclick="myshow('down',{$vo['agent_id']},'{$vo['agent_name']}')">下分</button>
-                        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('修改','/admin/user/agent_edit?agent_id={$vo.agent_id}')">修改</button>
+                        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('修改','/admin/User/agent_edit?agent_id={$vo.agent_id}')">修改</button>
                         <button class="layui-btn layui-btn-danger layui-btn-sm" onclick="member_del(this,{$vo['agent_id']})">删除</button>
                     </div>
                 </td>
@@ -294,7 +294,7 @@ function tijiao(){
     var type=$('#my_type').val();
     var load = layer.load();
     $.ajax({
-        url:"/admin/api/new_agent_money_change",
+        url:"/admin/Api/new_agent_money_change",
         data:{agent_id:agent_id,money:money,param:type},
         dataType:"json",
         type:"post",
@@ -372,7 +372,7 @@ function intToChinese ( str ) {
         }, function(value, index, elem){
             var load = layer.load();
             $.ajax({
-                url:"/admin/api/agent_money_change",
+                url:"/admin/Api/agent_money_change",
                 data:{agent_id:id,param:param,money:value},
                 dataType:"json",
                 type:"post",
@@ -403,7 +403,7 @@ function intToChinese ( str ) {
             }
             var load = layer.load();
             $.ajax({
-                url:'/admin/user/agent_status_change',
+                url:'/admin/User/agent_status_change',
                 data:{agent_id:id,status:status},
                 type:'post',
                 dataType:'json',
@@ -433,7 +433,7 @@ function intToChinese ( str ) {
             //发异步删除数据
             var load = layer.load();
             $.ajax({
-                url:'/admin/user/agent_del',
+                url:'/admin/User/agent_del',
                 data:{agent_id:id},
                 type:'post',
                 dataType:'json',
@@ -467,7 +467,7 @@ function intToChinese ( str ) {
             //捉到所有被选中的，发异步进行删除
             var load = layer.load();
             $.ajax({
-                url:'/admin/user/agent_del',
+                url:'/admin/User/agent_del',
                 data:{agent_id:data},
                 type:'post',
                 dataType:'json',
