--- a/application/agent/view/withdraw/agent_withdraw_list.html
+++ b/application/agent/view/withdraw/agent_withdraw_list.html
@@ -56,7 +56,7 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REDIRECT_URL']}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
             <a href="{:url('agent/api/excel_agent_withdraw_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
 
         </form>
