--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -98,7 +98,13 @@
                     <li>
                         <a _href="/admin/User/agent_list">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>代理列表</cite>
+                            <cite>一级代理</cite>
+                        </a>
+                    </li >
+                    <li>
+                        <a _href="/admin/User/under_agent_list">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>二级代理</cite>
                         </a>
                     </li >
                     <li>
