--- a/application/admin/view/user/under_agent_list.html
+++ b/application/admin/view/user/under_agent_list.html
@@ -123,7 +123,7 @@
         <a href="">首页</a>
         <a href="">用户管理</a>
         <a>
-            <cite>代理列表</cite></a>
+            <cite>二级代理</cite></a>
       </span>
     <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">ဂ</i></a>
@@ -136,7 +136,7 @@
             <input type="text" name="agent_name"  placeholder="代理账号" autocomplete="off" class="layui-input" value="{:input('get.agent_name')}">
             <input type="text" name="nickname"  placeholder="代理昵称" autocomplete="off" class="layui-input" value="{:input('get.nickname')}">
             <input type="text" name="phone"  placeholder="代理电话" autocomplete="off" class="layui-input" value="{:input('get.phone')}">
-            <input type="text" name="p_agent_id"  placeholder="代理直属" autocomplete="off" class="layui-input" value="{:input('get.p_agent_id')}">
+            <input type="text" name="p_agent_id"  placeholder="一级代理账号" autocomplete="off" class="layui-input" value="{:input('get.p_agent_id')}">
 
             <!--<div class="layui-input-inline">-->
                 <!--<select name="login_status">-->
@@ -154,8 +154,8 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="/admin/User/agent_list"  class="layui-btn layui-btn-normal">重置</a>
-            <a href="{:url('admin/Api/excel_agent_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
+            <a href="/admin/User/agent_list?param=1"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="{:url('admin/Api/excel_under_agent_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
         </form>
     </div>
     <xblock>
@@ -174,6 +174,7 @@
             <th>账号</th>
             <th>昵称</th>
             <!--<th>电话</th>-->
+            <th>直属代理</th>
             <th>余额</th>
             <th>注册时间</th>
             <th>登录状态</th>
@@ -191,6 +192,7 @@
                 <td>{$vo.agent_id}</td>
                 <td>{$vo.agent_name}</td>
                 <td>{$vo.nickname}</td>
+                <td>{$vo.p_agent_id|select_agent_username}</td>
                 <td>{$vo.money|number_format=###,2,".",""}</td>
 
                 <td>{$vo.add_time}</td>
