--- a/application/agent/view/index/main.html
+++ b/application/agent/view/index/main.html
@@ -80,7 +80,7 @@
                         {/volist}
                         {if condition="!empty($list)"}
                         <tr>
-                            <td><a href="/agent/agent/money_list" style="color: blue;">查看更多</a></td>
+                            <td><a href="/agent/Agent/money_list" style="color: blue;">查看更多</a></td>
                         </tr>
                         {/if}
                         </tbody>
