--- a/application/agent/view/user/user_list.html
+++ b/application/agent/view/user/user_list.html
@@ -125,12 +125,12 @@
                 </td>
 
                 <td class="td-status">
-                    <a onclick="x_admin_show('会员邀请码','/agent/user/user_code?id={$vo.uid}')" href="javascript:;"  title="会员邀请码">
+                    <a onclick="x_admin_show('会员邀请码','/agent/User/user_code?id={$vo.uid}')" href="javascript:;"  title="会员邀请码">
                         <span class="layui-btn layui-btn-mini " style="background-color: #C57979">查看</span>
                     </a>
                 </td>
                 <!--<td class="td-status">-->
-                    <!--<a onclick="x_admin_show('银行卡信息','/agent/user/bank_list?username={$vo.username}&utype=1')" href="javascript:;"  title="银行卡信息">-->
+                    <!--<a onclick="x_admin_show('银行卡信息','/agent/User/bank_list?username={$vo.username}&utype=1')" href="javascript:;"  title="银行卡信息">-->
                         <!--<span class="layui-btn layui-btn-mini " style="background-color: #84AF9B">查看</span>-->
                     <!--</a>-->
                 <!--</td>-->
@@ -139,7 +139,7 @@
                     <div class="layui-btn-group">
                         <!--<button class="layui-btn layui-btn-warm layui-btn-sm" onclick="myshow('up',{$vo['uid']},'{$vo['username']}')">上分</button>-->
                         <!--<button class="layui-btn layui-btn-sm " style="background-color: #5BB75B;" onclick="myshow('down',{$vo['uid']},'{$vo['username']}')">下分</button>-->
-                        <button class="layui-btn layui-btn-sm" onclick="x_admin_show('查看详情','/agent/user/user_edit?uid={$vo.uid}')">查看详情</button>
+                        <button class="layui-btn layui-btn-sm" onclick="x_admin_show('查看详情','/agent/User/user_edit?uid={$vo.uid}')">查看详情</button>
                         <!--<button class="layui-btn layui-btn-danger layui-btn-sm" onclick="member_del(this,{$vo['uid']})">删除</button>-->
                     </div>
                 </td>
