--- a/application/agent/view/agent/code.html
+++ b/application/agent/view/agent/code.html
@@ -36,7 +36,7 @@
                         <img src="{$path}" alt=""/>
                     </div>
                     <div class="layui-card-header" style="text-indent:60px;">
-                        <a href="/admin/user/down?name={$name}&path={$path}"><b>点击下载到本地</b></a>
+                        <a href="/admin/User/down?name={$name}&path={$path}"><b>点击下载到本地</b></a>
                     </div>
                 </div>
             </div>
