--- a/application/agent/view/login/login.html
+++ b/application/agent/view/login/login.html
@@ -27,7 +27,7 @@
             <input name="password" lay-verify="password" placeholder="密码"  type="password" class="layui-input">
             <hr class="hr15">
             <input name="code" lay-verify="code" placeholder="验证码"  type="text"  style="width: 60%;float: left;">
-            <img src="/agent/login/verify" alt="captcha" id="code" style="width: 40%;float: right;height:3rem;display: inline-block;" onClick="this.src=this.src+'?'+Math.random()"/>
+            <img src="/agent/Login/verify" alt="captcha" id="code" style="width: 40%;float: right;height:3rem;display: inline-block;" onClick="this.src=this.src+'?'+Math.random()"/>
 
             <hr class="hr15">
             <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="submit">
@@ -68,7 +68,7 @@
                 form.on('submit(login)', function(data){
                     var load = layer.load();
                     $('input[type="submit"]').attr("disabled",true);
-                    $.post("/agent/login/login",data.field,function(res){
+                    $.post("/agent/Login/login",data.field,function(res){
                         layer.close(load);
                         if(res.status==0){
                             layer.msg(res.msg,{icon: 2,time:1000},function(){
