--- a/application/agent/view/user/agent_edit.html
+++ b/application/agent/view/user/agent_edit.html
@@ -191,7 +191,7 @@
         //监听提交
         form.on('submit(add)', function(data){
 //            $('.layui-btn').attr("disabled",true);
-            $.post("/admin/user/agent_edit",data.field,function(res){
+            $.post("/agent/User/agent_edit",data.field,function(res){
                 if(res.status==0){
                     layer.msg(res.msg,{icon: 2,time:2000},function(){
                         $('.layui-btn').removeAttr("disabled");
