--- a/application/admin/view/coin/coin_edit.html
+++ b/application/admin/view/coin/coin_edit.html
@@ -82,15 +82,15 @@
                        autocomplete="off" class="layui-input" value="{$info.min_hand}">
             </div>
         </div>
-        <div class="layui-form-item">
-            <label for="max_hand" class="layui-form-label">
-                          最大手数
-            </label>
-            <div class="layui-input-inline"  >
-                <input type="number" id="max_hand" name="max_hand" required="" lay-verify="number"
-                       autocomplete="off" class="layui-input" value="{$info.max_hand}">
-            </div>
-        </div>
+        <!--<div class="layui-form-item">-->
+            <!--<label for="max_hand" class="layui-form-label">-->
+                          <!--最大手数-->
+            <!--</label>-->
+            <!--<div class="layui-input-inline"  >-->
+                <!--<input type="number" id="max_hand" name="max_hand" required="" lay-verify="number"-->
+                       <!--autocomplete="off" class="layui-input" value="{$info.max_hand}">-->
+            <!--</div>-->
+        <!--</div>-->
         <input type="hidden" name="id" value="{$info['id']}"/>
         <div class="layui-form-item">
             <label class="layui-form-label">
