--- a/application/admin/view/admin/kefu_list.html
+++ b/application/admin/view/admin/kefu_list.html
@@ -38,7 +38,7 @@
             <input class="layui-input" placeholder="截止日" name="end" id="end" value="{:input('get.end')}">
             <input type="text" name="name"  placeholder="客服名称" autocomplete="off" class="layui-input" value="{:input('get.name')}">
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="/admin/Admin/kefu_list"  class="layui-btn layui-btn-normal">重置</a>
 
         </form>
     </div>
