--- a/application/admin/view/admin/notice_list.html
+++ b/application/admin/view/admin/notice_list.html
@@ -45,7 +45,7 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="/admin/Admin/notice_list"  class="layui-btn layui-btn-normal">重置</a>
 
         </form>
     </div>
