--- a/application/admin/view/admin/adv_list.html
+++ b/application/admin/view/admin/adv_list.html
@@ -53,7 +53,7 @@
             </div>
 
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="/admin/Admin/adv_list"  class="layui-btn layui-btn-normal">重置</a>
 
         </form>
     </div>
