--- a/application/admin/view/admin/news_list.html
+++ b/application/admin/view/admin/news_list.html
@@ -54,7 +54,7 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="/admin/Admin/news_list"  class="layui-btn layui-btn-normal">重置</a>
 
         </form>
     </div>
