--- a/application/admin/view/coin/apply_coin_give_log.html
+++ b/application/admin/view/coin/apply_coin_give_log.html
@@ -54,7 +54,7 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REQUEST_URI']}?start={$mytime}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="/admin/Coin/apply_coin_give_log?start={$mytime}"  class="layui-btn layui-btn-normal">重置</a>
             <a href="{:url('admin/Api/excel_apply_coin_give_log',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
 
         </form>
