--- a/application/admin/view/order/keep_order_list.html
+++ b/application/admin/view/order/keep_order_list.html
@@ -62,7 +62,7 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REQUEST_URI']}?start={$mytime}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="/admin/Order/keep_order_list?start={$mytime}"  class="layui-btn layui-btn-normal">重置</a>
             <!--<a href="{:url('admin/Api/excel_order_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>-->
 
         </form>
