--- a/application/admin/view/user/real_auth.html
+++ b/application/admin/view/user/real_auth.html
@@ -55,7 +55,7 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="/admin/User/real_auth"  class="layui-btn layui-btn-normal">重置</a>
         </form>
     </div>
 
