--- a/application/admin/view/user/user_list.html
+++ b/application/admin/view/user/user_list.html
@@ -165,7 +165,7 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="/admin/User/user_list"  class="layui-btn layui-btn-normal">重置</a>
             <a href="{:url('admin/Api/excel_user_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
         </form>
     </div>
